--- a/app/src/main/res/drawable/main_recordbtn_bg.xml
+++ b/app/src/main/res/drawable/main_recordbtn_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
     android:useLevel="false">
-    <solid android:color="@color/white"></solid>
+    <solid android:color="@null"></solid>
     <stroke android:color="@color/red_FF0066" android:width="0.4dp"></stroke>
     <size android:width="15dp" android:height="15dp"></size>
     <padding android:bottom="1dp" android:left="2dp" android:right="2dp" android:top="1dp" />
