--- a/app/src/main/res/layout/item_mainlv_top.xml
+++ b/app/src/main/res/layout/item_mainlv_top.xml
@@ -3,6 +3,35 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_f3f3f3">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/main_iv_search"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            android:background="@color/white"
+            android:src="@mipmap/search"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="口袋记账本"
+            android:gravity="center"
+            android:background="@color/white"
+            android:textColor="@color/red_FF0066"
+            />
+
+    </LinearLayout>
+    <View
+        android:layout_height="1px"
+
+        android:layout_width="match_parent"
+
+        android:background="@color/red_FF0066"
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -45,12 +74,13 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:textColor="@color/black"/>
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/main_btn_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/main_recordbtn_bg"
             android:text="@string/jiyibi"
+
             android:textColor="@color/red_FF0066"
             android:typeface="serif"
             android:drawableTop="@mipmap/pen1"
@@ -61,7 +91,8 @@
         android:id="@+id/item_mainlv_top_tv_day"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="今日支出 0.00 收入 0.00"
+        android:gravity="center"
+        android:text="今天合计：0.00"
         android:typeface="serif"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
