--- a/app/src/main/res/layout/activity_history_in.xml
+++ b/app/src/main/res/layout/activity_history_in.xml
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/history_out"
+            android:text="收入记录"
             android:textStyle="bold"
             android:textSize="18sp"
             android:layout_centerInParent="true"/>
