--- a/app/src/main/res/layout/fragment_b_b.xml
+++ b/app/src/main/res/layout/fragment_b_b.xml
@@ -3,12 +3,98 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".frag_first.BBFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    android:background="@color/grey_f3f3f3"
+    android:orientation="vertical">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/chart_info"
+                android:textColor="@color/red_FF0066"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
+            <ImageView
+                android:id="@+id/chart_iv_rili"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@mipmap/it_rili"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:onClick="onClick"/>
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/white"
+            android:padding="10dp"
+            android:layout_marginTop="20dp">
+            <TextView
+                android:id="@+id/chart_tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2020年11月账单"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="16sp"/>
+            <TextView
+                android:id="@+id/chart_tv_out"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="共1笔支出, ￥23.0"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:layout_marginTop="10dp"/>
+            <TextView
+                android:id="@+id/chart_tv_in"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="共2笔收入, ￥113.0"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:layout_marginTop="10dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="10dp"
+            android:gravity="center">
+            <Button
+                android:id="@+id/chart_btn_out"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:text="@string/out"
+                android:background="@drawable/dialog_btn_bg2"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:onClick="onClick"
+                android:layout_marginRight="10dp"/>
+            <Button
+                android:id="@+id/chart_btn_in"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:text="@string/in"
+                android:background="@drawable/dialog_btn_bg"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:onClick="onClick"
+                android:layout_marginLeft="10dp"/>
+        </LinearLayout>
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/chart_vp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
+
 
 </FrameLayout>
