--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -5,7 +5,29 @@
     android:layout_height="match_parent"
     android:padding="20dp"
     android:background="@color/white"
+    android:orientation="vertical"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="更多"
+            android:textColor="@color/red_FF0066"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+        <View
+            android:layout_height="1px"
+
+            android:layout_width="match_parent"
+
+            android:background="@color/red_FF0066"
+            />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
