--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/write" android:title="记账" android:icon="@mipmap/pen1"/>
-    <item android:id="@+id/baobiao" android:title="报表"></item>
-    <item android:id="@+id/more" android:title="更多" android:icon="@mipmap/money_1"/>
+    <item android:id="@+id/baobiao" android:title="报表" android:icon="@mipmap/baobiao"></item>
+    <item android:id="@+id/more" android:title="更多" android:icon="@mipmap/more"/>
 </menu>
